--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             <li><a href="snake-mobile.html">Snake game</a></li>
             <li><a href="brick-breaker.html">Brick Breaker</a></li>
             <li><a href="kotak-game.html">Game Kotak</a></li>
+            <li><a href="Dte.html">Game Keren</a></li>
         </ul>
         <div class="menu-btn" id="menuBtn">☰</div>
     </nav>
