--- a/snake-mobile.html
+++ b/snake-mobile.html
@@ -235,7 +235,7 @@
     </div>
 
     <!-- menu button -->
-    <button id="openMenu" class="menu-btn" aria-haspopup="dialog" aria-controls="sheet">≡</button>
+    <button id="openMenu" class="menu-btn"><a href="index.html" style="text-decoration: none;">⟵ Kembali</button>
 
     <!-- slide-up sheet -->
     <div id="sheet" class="sheet" role="dialog" aria-modal="false" aria-hidden="true">
