--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 
     h1{
         text-align:center;
-        font-size:28px;
-        margin-bottom:25px;
+        font-size:48px;
+        margin-bottom:40%;
         color:var(--accent);
         text-shadow: 0 0 8px var(--accent);
     }
