--- a/index.html
+++ b/index.html
@@ -119,6 +119,11 @@
             <div class="arrow">›</div>
         </a>
 
+        <a href="subway-car.html" class="card">
+            <span>Subway Car</span>
+            <div class="arrow">›</div>
+        </a>
+
         <!-- Bisa tambah game lain -->
     </div>
 </div>
